# pyemprop

./: Pipfile  README.md  pyproject.toml
pyemprop/: __main__.py  cli.py  propagation.py
pyemprop/examples/: exmpl_fresnelzone.py
pyemprop/utils/: geometry.py  optel.py  plotting.py  scalarwave.py  simconf.py
